<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.InfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="App Info"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/home_info"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                android:padding="1dp"
                android:src="@drawable/home"
                android:visibility="visible" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.InfoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_title" />

                <TextView
                    style="@style/text_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version" />

                <TextView
                    style="@style/text_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/app_version" />

            </LinearLayout>

            <TextView
                style="@style/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                style="@style/text_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_description"
                android:id="@+id/long_des"
                />

            <TextView
                style="@style/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features" />

            <TextView
                style="@style/text_des"
                android:layout_width="match_parent"
                android:id="@+id/features_des"
                android:layout_height="wrap_content"
                android:text="@string/features_des" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
</layout>