<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_5"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/edit_ins"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/dp_10"
                android:src="@drawable/add_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="Insurance Certificate"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/close_ins"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/bg_close"
                android:src="@drawable/close" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_entry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginRight="@dimen/dp_2"
                android:layout_marginBottom="@dimen/dp_2"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/insurance_image"
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/camera_primary" />

                <ProgressBar
                    android:id="@+id/pb_insurance_popup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:visibility="visible"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp_2"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_2"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="@dimen/dp_5"
                            android:text="@string/valid_from"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/et_validfrom"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="@dimen/dp_5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/btn_valid_from"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/calendar" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp_2"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_2"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="@dimen/dp_5"
                            android:text="@string/valid_upto"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/et_validupto"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="@dimen/dp_5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/btn_valid_upto"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/calendar" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="Agency"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/et_agency"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:inputType="textCapWords"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_2"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:padding="@dimen/dp_5"
                            android:text="@string/amount"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/et_amount_paid"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:digits="0123456789."
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_5">

                        <Button
                            android:id="@+id/btn_insurance_submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimaryDark"
                            android:text="Save"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginRight="@dimen/dp_2"
                android:layout_marginBottom="@dimen/dp_2"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/insurance_image_show"
                    android:layout_width="@dimen/image_width"
                    android:layout_height="@dimen/image_height"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/camera_primary" />

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:visibility="visible"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp_2"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_2"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_5">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="@dimen/dp_5"
                            android:text="@string/valid_from"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_validfrom_show"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="@dimen/dp_5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp_2"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginRight="@dimen/dp_2"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_5">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="@dimen/dp_5"
                            android:text="@string/valid_upto"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_validupto_show"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:padding="@dimen/dp_5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp_2"
                        android:layout_marginTop="@dimen/dp_2"
                        android:layout_marginRight="@dimen/dp_2"
                        android:layout_marginBottom="@dimen/dp_2"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_5">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="Agency"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_agency_show"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/dp_5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_2"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_5"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:padding="@dimen/dp_5"
                            android:text="@string/amount"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_amount_show"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/dp_5"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>


</ScrollView>